--- a/.vscodeignore
+++ b/.vscodeignore
@@ -5,7 +5,7 @@ src/**
 .prettierignore
 .prettierrc
 .eslintrc.json
-eslint.config.js
+eslint.config.mjs
 tsconfig.json
 tsconfig.webview.json
 tsconfig.node.json
