--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -96,4 +96,6 @@ jobs:
     needs: release
     if: needs.release.outputs.new_release_published == 'true'
     uses: ./.github/workflows/publish.yml
+    permissions:
+      contents: write
     secrets: inherit
