--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -3,6 +3,11 @@ name: Publish Extension
 on:
   # Trigger when called by the Release workflow after Semantic Release creates a new release
   workflow_call:
+    inputs:
+      ref:
+        description: 'Git ref (branch, SHA or tag) to build from'
+        required: true
+        type: string
   # Allow manual triggering
   workflow_dispatch:
     inputs:
@@ -28,7 +33,15 @@ jobs:
             marketplace.visualstudio.com:443
             open-vsx.org:443
 
-      - name: Checkout
+      - name: Checkout for workflow_call (release)
+        if: github.event_name == 'workflow_call'
+        uses: actions/checkout@v6
+        with:
+          fetch-depth: 0
+          ref: ${{ inputs.ref }}
+
+      - name: Checkout for manual run
+        if: github.event_name == 'workflow_dispatch'
         uses: actions/checkout@v6
         with:
           fetch-depth: 0
