--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -99,6 +99,8 @@ jobs:
     needs: release
     if: needs.release.outputs.new_release_published == 'true'
     uses: ./.github/workflows/publish.yml
+    with:
+      ref: main
     permissions:
       contents: write
     secrets: inherit
